# prime_numbers

./: README.md
__SIEVE/: CMakeLists.txt  bigInt.cpp  bigInt.h  main.cpp
___PLANNED_STEP_DONT_WORKING/: CMakeLists.txt
___ULTIMATE_PROOF_DONT_WORKING/: main.cpp
not_primary/: main.cpp
not_primary_old/: main.cpp
not_primary_working/: CMakeLists.txt  main.cpp
primary_1/: CMakeLists.txt  main.cpp
primary_symmetry/: CMakeLists.txt  main.cpp
python/: data.txt  run.py
sequence/: CMakeLists.txt  main.cpp
sequence_vectorized/: CMakeLists.txt  main.cpp
sieve/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  main.cpp
untitled2/: CMakeLists.txt  main.cpp
